--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,5 @@ mat-toolbar { background-color: #3f51b5 !important; color: #fff !important; }
 .button-row button, .button-row a {  margin-right: 8px; }
 .table-data:nth-child(even) { background-color: #4d62da5e; }
 .table-data:nth-child(odd) { background-color: #fff; }
+.td-align-left { text-align: left; padding-left: 5px; }
+.td-align-center { text-align: center; }
