rename compoent and correct server list issue, put on right place _:D)

--- a/src/app/app-nav/app-nav.component.html
+++ b/src/app/app-nav/app-nav.component.html
@@ -21,6 +21,6 @@
       <span>ToggleApp</span>
     </mat-toolbar>
     <!-- Add Content Here -->
-    <list-apps></list-apps>
+    <apps-list></apps-list>
   </mat-sidenav-content>
 </mat-sidenav-container>
