--- a/src/app/apps/component/apps-list.component.html
+++ b/src/app/apps/component/apps-list.component.html
@@ -1,12 +1,12 @@
 <div class="mat-elevation-z8">
   <table mat-table class="full-width-table" [dataSource]="dataSource" matSort aria-label="Elements">
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Serviço</th>
       <td mat-cell *matCellDef="let row" class="cl-width-30">{{row.name}}</td>
     </ng-container>
 
     <ng-container matColumnDef="methods">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Métodos</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Método</th>
       <td mat-cell *matCellDef="let row">
         <table class="full-width-table" aria-label="Elements">
           <tr *ngFor="let item of row.methods" matRow matColumnDef="methods" class="table-data">
